samples/_failures_safe/1761316847_c3437f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe51a502.c: In function ‘main’:
./samples/SAFE/__tmp_fe51a502.c:166:5: error: expected ‘,’ or ‘;’ at end of input
  166 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_fe51a502.c:166:5: error: expected declaration or statement at end of input
